Fix header and close button alignment by placing in container
Header and close button are supposed to be aligned so placed them in a
flex container together.

Also fix alignment of the flex items in the text.

Need to figure out why the text does not display the same as in the
desired outcome image - doesn't extend far right out enough.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,34 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* My Solution */
+.cols {
+  display: flex;
+  padding: 3%;
+  gap: 3%;
+}
+
+.icon {
+  flex: 1 0 auto;
+}
+
+.heading-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.close-button {
+  flex: 0 0 auto;
+}
+
+.text {
+  margin-top: 8px;
+  margin-bottom: 12px;
+}
